[tool.poetry]
name = "text-classifier"
version = "0.1.0"
description = ""
authors = ["rawnaq <engrawnaqaburummn@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
pandas = "^1.3.4"
jupyterlab = "^3.2.4"
sklearn = "^0.0"
keras = "^2.7.0"
tensorflow = "^2.7.0"
matplotlib = "^3.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
